fix distorted image

--- a/website/src/components/flex/FlexHero.module.scss
+++ b/website/src/components/flex/FlexHero.module.scss
@@ -5,7 +5,7 @@
   height: 60vh;
   background: #fff;
   box-shadow: 2px 2px 5px;
-  filter: contrast(7);
+  //filter: contrast(7);
 
   //--mask: linear-gradient(red, #{rgba(#000, 0.45)});
 
